# RunaxAI

./: .env.example  .gitignore  GEMINI.md  Makefile  main.py  pyproject.toml  worker.py
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
.github/workflows/: deploy.yml  eval.yml  pr.yml
agents/: base.py  reasoning.py  router.py
alembic/versions/: b9f4a1c7d8e2_drop_legacy_user_memory.py
api/: chat.py  project_chat.py  projects.py  rate_limit.py  server.py  session_budget.py
clients/: __init__.py
database/: models.py
docs/: deployment.md
docs/architecture/: observability.md
docs/superpowers/plans/: 2026-06-20-openrouter-provider.md
docs/superpowers/specs/: 2026-06-20-openrouter-provider-design.md
evals/: README.md  run_eval.py
evals/baselines/: smoke.md
frontend/: package.json
frontend/app/: globals.css
frontend/app/api/auth/callback/google/: page.tsx
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/projects/[id]/: loading.tsx
frontend/components/: AttachmentModal.tsx  AuthSupportLayout.tsx  ChatArea.tsx  ChatInput.tsx  ChatPage.tsx  LandingPage.tsx  MessageBubble.tsx  ProjectPage.tsx  ProjectSidebar.tsx  QuizRenderer.tsx  SettingsPage.tsx  Sidebar.tsx  SidebarAccountFooter.tsx  ThinkingBlock.tsx
frontend/components/landing/: ScrollReveal.tsx
frontend/components/ui/: TactileButton.tsx
frontend/components/visualizations/: MermaidDiagram.tsx
frontend/content/blog/: caching-and-redis.mdx  deploying-on-a-mac-mini.mdx  introducing-runaxai.mdx  llm-orchestration.mdx  memory-architecture.mdx  rag-pipeline.mdx
frontend/content/research/stocks/: aem.md  apo.md  arqq.md  avav.md  cop.md  cvx.md  dino.md  dvn.md  eqt.md  et.md  fang.md  fti.md  hal.md  kmi.md  krmn.md  lly.md  lyb.md  mdt.md  mpc.md  nbis.md  nvo.md  oke.md  onto.md  oxy.md  psx.md  qbts.md  rklb.md  shel.md  slb.md  spir.md  trgp.md  vlo.md  wdc.md  wmb.md  xom.md
frontend/lib/: api.ts  types.ts  upload.ts
functions/: browser.py  crawl_website.py  local_kb.py  portfolio.py  search.py  tool_router.py
helm/agenticrag/: values.prod.yaml  values.yaml
helm/agenticrag/files/grafana/alerting/: agenticrag-alerts.yml
helm/agenticrag/files/grafana/dashboards/: agenticrag-agentic-ops.json  agenticrag-economics.json  agenticrag-ux-latency.json
helm/agenticrag/templates/: _helpers.tpl  configmap.yaml  networkpolicy.yaml  secrets.yaml
helm/agenticrag/templates/api/: deployment.yaml
helm/agenticrag/templates/monitoring/: grafana-dashboards-configmap.yaml  grafana.yaml  loki.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  tempo.yaml
helm/agenticrag/templates/worker/: deployment.yaml
helm/github-runners/: runner-scale-set-values.yaml
llm/: client.py  factory.py
llm/providers/: __init__.py  litellm_provider.py  openrouter_provider.py
memory/: semantic.py
monitoring/grafana/provisioning/dashboards/: agenticrag-economics.json  agenticrag-http-traffic.json  agenticrag-ux-latency.json
monitoring/prometheus/: prometheus.yml
observability/: logging_config.py  metrics.py  propagation.py  task_instrumentation.py  tracing.py
pipeline/: chat_attachments.py  chunker.py  embedder.py  ingestion.py  pinecone_helpers.py  query_rewrite.py  retriever.py  storage.py
prompts/: memory.py
scripts/: deploy.sh  install-metrics-server.sh  reset_rag.py  sync-helm-secrets.sh
services/: chat_postprocess_service.py
tasks/: document_tasks.py  memory_tasks.py
tests/: test_chat_orchestration.py  test_chat_postprocess_service.py  test_eval_judge.py  test_helm_grafana_sync.py  test_llm_stream_metrics.py  test_memory_prompts.py  test_memory_semantic.py  test_memory_tasks.py  test_openrouter_provider.py  test_orchestrator_model.py  test_project_search.py  test_search_providers.py  test_session_budget.py  test_task_instrumentation.py
utils/: streaming.py
