[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.8.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "google-genai>=2.8.0",
    "litellm==1.88.0",
    "openai>=2.41.0",
    "pinecone>=9.1.0",
    "playwright>=1.60.0",
    "pypdf>=6.13.1",
    "redis[search]>=8.0.0",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "faker>=40.21.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "prometheus-client>=0.25.0",
    "python-docx>=1.2.0",
    "pinecone-text>=0.11.0",
    "python-multipart>=0.0.32",
    "minio>=7.2.20",
    "sqlalchemy>=2.0.50",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "httpx-oauth>=0.17.0",
    "arq>=0.28.0",
    "greenlet>=3.5.1",
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "pgvector>=0.4.2",
]
