[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.9.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "google-genai>=2.12.1",
    "litellm==1.92.0",
    "openai>=2.46.0",
    "pinecone>=9.1.0",
    "playwright>=1.61.0",
    "pypdf>=6.14.2",
    "redis[search]>=8.0.1",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
    "faker>=40.31.0",
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "pymupdf>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "prometheus-client>=0.25.0",
    "python-docx>=1.2.0",
    "pinecone-text>=0.11.0",
    "python-multipart>=0.0.32",
    "minio>=7.2.20",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "httpx-oauth>=0.17.0",
    "arq>=0.28.0",
    "greenlet>=3.5.3",
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
    "opentelemetry-instrumentation-fastapi>=0.65b0",
    "opentelemetry-instrumentation-redis>=0.65b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0",
    "opentelemetry-instrumentation-httpx>=0.65b0",
    "pgvector>=0.5.0",
]
